Removing path aliases

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,7 +5,7 @@ import {
   siteTagline,
   siteDescription,
   mainNavList,
-} from "@config";
+} from "../config";
 import "../assets/css/base.css";
 
 interface Props {
