--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ const audioList = await Promise.all(
           alt="Bradley looking at the camera, sitting in front of an open-face red brick wall"
           loading="eager"
           class="sticky top-0"
-          widths={[600, 800, 1000, 1200, 1600]}
+          widths={[300, 600, 800, 1000, 1200, 1600]}
           sizes="(max-width: 1024px) 100%, (max-width: 1546px) 40%, 1200px"
         />
       </div>
@@ -125,7 +125,7 @@ const audioList = await Promise.all(
           src={ImageBradleyHeadshot}
           alt="Bradley smiling, sitting in front of a 5-manual organ"
           class="sticky top-0"
-          widths={[600, 800, 1000, 1200, 1600]}
+          widths={[300, 600, 800, 1000, 1200, 1600]}
           sizes="(max-width: 1024px) 100%, (max-width: 1546px) 40%, 1200px"
         />
       </div>
@@ -159,7 +159,7 @@ const audioList = await Promise.all(
           src={ImageBradleyHands}
           alt="Close-up of Bradley's hands, playing on two different organ manuals"
           class="sticky top-10"
-          widths={[600, 800, 1000, 1200, 1600]}
+          widths={[300, 600, 800, 1000, 1200, 1600]}
           sizes="(max-width: 1024px) 100%, (max-width: 1546px) 40%, 1200px"
         />
       </div>
