--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,7 +67,7 @@ const audioList = await Promise.all(
           loading="eager"
           class="sticky top-0"
           widths={[300, 600, 800, 1000, 1200, 1600]}
-          sizes="(max-width: 1024px) 100%, (max-width: 1546px) 40%, 1200px"
+          sizes="(max-width: 1024px) 100vw, (max-width: 1546px) 40vw, 1200px"
         />
       </div>
       <div class="xl:p-10 2xl:p-14">
@@ -102,12 +102,14 @@ const audioList = await Promise.all(
             ))
           }
         </ul>
-        <div class="mt-20 flex justify-center sticky bottom-10">
-          <div class="pt-8 pb-0 px-6 aspect-square rounded-3xl bg-gray-800 bg-opacity-50">
+        <div class="sticky bottom-10 mt-20 flex justify-center">
+          <div
+            class="aspect-square rounded-3xl bg-gray-800 bg-opacity-50 px-6 pb-0 pt-8"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 448 512"
-              class="fill-current w-10 animate-bounce"
+              class="w-10 animate-bounce fill-current"
               ><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
               <path
                 d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
@@ -133,7 +135,7 @@ const audioList = await Promise.all(
           alt="Bradley smiling, sitting in front of a 5-manual organ"
           class="sticky top-0"
           widths={[300, 600, 800, 1000, 1200, 1600]}
-          sizes="(max-width: 1024px) 100%, (max-width: 1546px) 40%, 1200px"
+          sizes="(max-width: 1024px) 100vw, (max-width: 1546px) 40vw, 1200px"
         />
       </div>
     </section>
@@ -181,7 +183,7 @@ const audioList = await Promise.all(
           alt="Close-up of Bradley's hands, playing on two different organ manuals"
           class="sticky top-10"
           widths={[300, 600, 800, 1000, 1200, 1600]}
-          sizes="(max-width: 1024px) 100%, (max-width: 1546px) 40%, 1200px"
+          sizes="(max-width: 1024px) 100vw, (max-width: 1546px) 40vw, 1200px"
         />
       </div>
       <div class="lg:p-10">
@@ -261,7 +263,13 @@ const audioList = await Promise.all(
         </div>
       </div>
       <div class="full-bleed grid place-items-center">
-        <Image src={ImageBradleyOutside} alt="" class="sticky top-0" />
+        <Image
+          src={ImageBradleyOutside}
+          widths={[300, 600, 800, 1000, 1200, 1600]}
+          sizes="(max-width: 1024px) 100vw, (max-width: 1546px) 40vw, 1200px"
+          alt="Bradley sitting outisde wearing sunglasses, looking to the side."
+          class="sticky top-0"
+        />
       </div>
     </section>
   </div>
