--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -120,6 +120,11 @@ let pageOgImage;
           }
         },
       );
+      if (window.location.hash) {
+        setTimeout(() => {
+          document.querySelector(window.location.hash)?.scrollIntoView();
+        }, 200);
+      }
     </script>
   </body>
 </html>
