--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -102,20 +102,20 @@ const audioList = await Promise.all(
             ))
           }
         </ul>
-        <div class="sticky bottom-10 mt-20 flex justify-center">
-          <div
-            class="aspect-square rounded-3xl bg-gray-800 bg-opacity-50 px-6 pb-0 pt-8"
+      </div>
+      <div class="sticky bottom-10 mt-20 flex justify-center lg:col-span-2">
+        <div
+          class="aspect-square rounded-3xl bg-gray-800 bg-opacity-50 px-6 pb-0 pt-8"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+            class="w-10 animate-bounce fill-current"
+            ><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+              d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
+            ></path></svg
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 448 512"
-              class="w-10 animate-bounce fill-current"
-              ><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-              <path
-                d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
-              ></path></svg
-            >
-          </div>
         </div>
       </div>
     </section>
