--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -177,7 +177,7 @@ const audioList = await Promise.all(
 
     <!-- TEACHING SECTION ----------------------------------------------------------------------------------- -->
     <section class="container grid gap-10 lg:grid-cols-2" id="section-teaching">
-      <div class="full-bleed">
+      <div class="full-bleed order-2 lg:order-1">
         <Image
           src={ImageBradleyHands}
           alt="Close-up of Bradley's hands, playing on two different organ manuals"
@@ -186,7 +186,7 @@ const audioList = await Promise.all(
           sizes="(max-width: 1024px) 100vw, (max-width: 1546px) 40vw, 1200px"
         />
       </div>
-      <div class="lg:p-10">
+      <div class="order-1 lg:order-2 lg:p-10">
         <div
           class="prose prose-gray prose-invert grid gap-y-10 pl-0 prose-h2:font-alternate prose-h2:text-4xl prose-h2:font-medium"
         >
