Finished contact form; need to do server

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -22,6 +22,8 @@ const title = frontmatter.title ?? "Not found";
           src="/video/david.mp4"
           subtitlesSrc="/video/thank-you.mp4"
           client:load
+          height={632}
+          width={640}
         />
       </div>
     </div>
