Hero image fetchpriority high

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,6 +68,7 @@ const audioList = await Promise.all(
           class="sticky top-0"
           widths={[300, 600, 800, 1000, 1200, 1600]}
           sizes="(max-width: 1024px) 100vw, (max-width: 1546px) 40vw, 1200px"
+          fetchpriority="high"
         />
       </div>
       <div class="xl:p-10 2xl:p-14">
